--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -3566,6 +3566,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '_name_' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[80], line 83\u001b[0m\n\u001b[0;32m     79\u001b[0m             print_slow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOh, maaf mendengar Anda kurang puas dengan mobil listrik ini.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     81\u001b[0m         \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTekan Enter untuk melanjutkan...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 83\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43m_name_\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_main_\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     84\u001b[0m     main()\n",
+      "\u001b[1;31mNameError\u001b[0m: name '_name_' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import os\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "# Assume vectorizer and model have been trained previously\n",
+    "vectorizer = CountVectorizer()\n",
+    "naive_bayes = MultinomialNB()\n",
+    "\n",
+    "# Sample data for illustration (replace with your actual trained model)\n",
+    "sample_texts = [\"mobil ini bagus\", \"saya tidak suka mobil ini\", \"performanya biasa saja\", \"mobil listrik ini luar biasa\"]\n",
+    "sample_labels = [\"positif\", \"negatif\", \"netral\", \"positif\"]\n",
+    "X_train = vectorizer.fit_transform(sample_texts)\n",
+    "naive_bayes.fit(X_train, sample_labels)\n",
+    "\n",
+    "def clear_screen():\n",
+    "    os.system('cls' if os.name == 'nt' else 'clear')\n",
+    "\n",
+    "def print_slow(text):\n",
+    "    for char in text:\n",
+    "        print(char, end='', flush=True)\n",
+    "        time.sleep(0.02)\n",
+    "    print()\n",
+    "\n",
+    "def print_banner():\n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print_slow(\"🚗⚡ Selamat Datang di Program Restrik 🔋🔍\")\n",
+    "    print_slow(\"Sentiment Analysis: Review Mobil Listrik\")\n",
+    "    print(\"=\" * 60)\n",
+    "\n",
+    "def get_emoji(sentiment):\n",
+    "    return {\n",
+    "        \"positif\": \"😃\",\n",
+    "        \"netral\": \"😐\",\n",
+    "        \"negatif\": \"😞\"\n",
+    "    }.get(sentiment, \"❓\")\n",
+    "\n",
+    "def analyze_sentiment(review):\n",
+    "    review_vec = vectorizer.transform([review])\n",
+    "    predicted_sentiment = naive_bayes.predict(review_vec)[0]\n",
+    "    return predicted_sentiment\n",
+    "\n",
+    "def main():\n",
+    "    while True:\n",
+    "        clear_screen()\n",
+    "        print_banner()\n",
+    "        \n",
+    "        print(\"\\nSilakan masukkan review Anda tentang mobil listrik.\")\n",
+    "        print(\"Ketik 'keluar' untuk mengakhiri program.\")\n",
+    "        \n",
+    "        review = input(\"\\n📝 Review Anda: \")\n",
+    "        \n",
+    "        if review.lower() == 'keluar':\n",
+    "            print_slow(\"\\nTerima kasih telah menggunakan program Restrik!\")\n",
+    "            print(\"=\" * 60)\n",
+    "            break\n",
+    "        \n",
+    "        print(\"\\nMenganalisis sentimen...\")\n",
+    "        for _ in range(3):\n",
+    "            print(\".\", end='', flush=True)\n",
+    "            time.sleep(0.5)\n",
+    "        print(\"\\n\")\n",
+    "        \n",
+    "        sentiment = analyze_sentiment(review)\n",
+    "        emoji = get_emoji(sentiment)\n",
+    "        \n",
+    "        print(\"-\" * 60)\n",
+    "        print(f\"📊 Hasil Analisis Sentimen\")\n",
+    "        print(\"-\" * 60)\n",
+    "        print(f\"Review  : {review}\")\n",
+    "        print(f\"Sentimen: {sentiment.capitalize()} {emoji}\")\n",
+    "        print(\"-\" * 60)\n",
+    "        \n",
+    "        if sentiment == \"positif\":\n",
+    "            print_slow(\"Wow! Sepertinya kamu sangat menyukai mobil listrik ini!\")\n",
+    "        elif sentiment == \"netral\":\n",
+    "            print_slow(\"Hmm, kamu memiliki pandangan yang cukup netral tentang mobil ini.\")\n",
+    "        else:\n",
+    "            print_slow(\"Oh, maaf mendengar Anda kurang puas dengan mobil listrik ini.\")\n",
+    "        \n",
+    "        input(\"\\nTekan Enter untuk melanjutkan...\")\n",
+    "\n",
+    "if _name_ == \"_main_\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
@@ -3579,14 +3683,14 @@
     }
    ],
    "source": [
-    "new_comment = input(\"\\nMasukkan komentar: \")\n",
-    "new_comment_vec = vectorizer.transform([new_comment])\n",
-    "predicted_sentimen = naive_bayes.predict(new_comment_vec)\n",
+    "# new_comment = input(\"\\nMasukkan komentar: \")\n",
+    "# new_comment_vec = vectorizer.transform([new_comment])\n",
+    "# predicted_sentimen = naive_bayes.predict(new_comment_vec)\n",
     "\n",
-    "sentiment_label = predicted_sentimen[0]\n",
+    "# sentiment_label = predicted_sentimen[0]\n",
     "\n",
-    "print(f\"Komentar: {new_comment}\")\n",
-    "print(f\"Sentimen dari komentar: {sentiment_label}\")"
+    "# print(f\"Komentar: {new_comment}\")\n",
+    "# print(f\"Sentimen dari komentar: {sentiment_label}\")"
    ]
   }
  ],
