Fix error again xixi👩🏻‍🔧

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -3487,7 +3487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3512,7 +3512,7 @@
       "Review  : Teknologi yang sangat inovatif\n",
       "Sentimen: Positif 😃\n",
       "------------------------------------------------------------\n",
-      "Wow! Sepertinya kamu sangat menyukai mobil listrik ini!\n",
+      "Wow! Sepertinya Anda sangat menyukai mobil listrik ini!\n",
       "\n",
       "============================================================\n",
       "🚗⚡ Selamat Datang di Program Restrik 🔋🔍\n",
@@ -3528,7 +3528,7 @@
       "------------------------------------------------------------\n",
       "📊 Hasil Analisis Sentimen\n",
       "------------------------------------------------------------\n",
-      "Review  : Saya tidak suka modelnya\n",
+      "Review  : saya kurang suka modelnya\n",
       "Sentimen: Negatif 😞\n",
       "------------------------------------------------------------\n",
       "Oh, maaf mendengar Anda kurang puas dengan mobil listrik ini.\n",
@@ -3635,9 +3635,9 @@
     "        print(\"-\" * 60)\n",
     "        \n",
     "        if sentiment == \"positif\":\n",
-    "            print_slow(\"Wow! Sepertinya kamu sangat menyukai mobil listrik ini!\")\n",
+    "            print_slow(\"Wow! Sepertinya Anda sangat menyukai mobil listrik ini!\")\n",
     "        elif sentiment == \"netral\":\n",
-    "            print_slow(\"Hmm, kamu memiliki pandangan yang cukup netral tentang mobil ini.\")\n",
+    "            print_slow(\"Hmm, Anda memiliki pandangan yang cukup netral tentang mobil ini.\")\n",
     "        else:\n",
     "            print_slow(\"Oh, maaf mendengar Anda kurang puas dengan mobil listrik ini.\")\n",
     "        \n",
